<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/priorityHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/priority"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel_button"
        android:padding="6dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="@id/priorityHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/priorityHeader" />

    <RadioGroup
        android:id="@+id/priorityRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:animateLayoutChanges="true"
        android:checkedButton="@id/mediumPriorityButton"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priorityHeader">

        <RadioButton
            android:id="@+id/lowPriorityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_green_flag"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/mediumPriorityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_yellow_flag"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/highPriorityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_red_flag"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/high" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>